--- a/myTunes/MainWindow.xaml
+++ b/myTunes/MainWindow.xaml
@@ -9,6 +9,8 @@
     <Window.CommandBindings>
         </Window.CommandBindings>
     <Grid Margin="0,0,35,19">
+        <MediaElement Name="mediaElement" LoadedBehavior="Manual" UnloadedBehavior="Stop" />
+
         <ListBox x:Name="songsListBox" Margin="20,80,770,10" ItemsSource="{Binding Playlists}"
                  SelectionChanged="songsListBox_SelectionChanged">
             <ListBox.ItemTemplate>
@@ -27,6 +29,11 @@
                 <DataGridTextColumn Binding="{Binding album}" Header="Album" Width="185"/>
                 <DataGridTextColumn Binding="{Binding genre}" Header="Genre" Width="137"/>
             </DataGrid.Columns>
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Play" Click="PlayMenuItem_Click" />
+                </ContextMenu>
+            </DataGrid.ContextMenu>
         </DataGrid>
         <StackPanel Margin="214,477,0,0" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="342">
             <Button x:Name="playButton" Content="Play" Margin="5" Width="75"/>
