Remove Song functionality added (bugs)
You can remove a song from the library. However, you cannot remove a song from a playlist. The page will become unresponsive if you try.

--- a/myTunes/MainWindow.xaml
+++ b/myTunes/MainWindow.xaml
@@ -49,6 +49,9 @@
                     <ContextMenu>
                         <MenuItem Header="Play" Click="PlayMenuItem_Click" />
                         <MenuItem Header="Stop" Click="StopMenuItem_Click"/>
+                        <MenuItem Header="Remove from All Music" Click="RemoveFromAllMusic_Click"/>
+                        <MenuItem Header="Remove from Playlist" Click="RemoveFromPlaylist_Click"/>
+
                     </ContextMenu>
                 </DataGrid.ContextMenu>
             </DataGrid>
