--- a/myTunes/MainWindow.xaml
+++ b/myTunes/MainWindow.xaml
@@ -1,32 +1,43 @@
 ﻿<Window x:Class="myTunes.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:myTunes"
-        mc:Ignorable="d"
+        MinWidth="600"
+        MinHeight="400"
         Title="My Tunes" Height="571" Width="1000" Icon="/Images/wave-sound.png">
-    <Window.CommandBindings>
-        </Window.CommandBindings>
+
     <DockPanel>
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
                 <Button x:Name="addSongButton" Margin="5" Width="50" ToolTip="Add Song">
-                    <Image Source="/Images/folder.png" ></Image>
+                    <Image Source="/Images/folder.png" />
                 </Button>
                 <Button x:Name="addPlaylistButton" Margin="5" Width="50" ToolTip="Add Playlist" Click="AddPlaylistButton_Click">
-                    <Image Source="/Images/playlist.png" ></Image>
+                    <Image Source="/Images/playlist.png" />
                 </Button>
                 <Button x:Name="infoButton" Margin="5" Width="50" ToolTip="More info" Click="moreInfo_Click">
-                    <Image Source="/Images/info.png" ></Image>
+                    <Image Source="/Images/info.png" />
                 </Button>
             </ToolBar>
         </ToolBarTray>
-        <Grid Margin="0,0,35,19" Height="458">
-            <MediaElement Name="mediaElement" LoadedBehavior="Manual" UnloadedBehavior="Stop" Margin="0,0,0,39" />
 
-            <ListBox x:Name="songsListBox" Margin="20,31,770,30" ItemsSource="{Binding Playlists}"
-                     SelectionChanged="songsListBox_SelectionChanged">
+        <!-- Main Grid with Columns for Fixed ListBox and Stretching DataGrid -->
+        <Grid Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200" />
+                <!-- Fixed Width for ListBox -->
+                <ColumnDefinition Width="*" />
+                <!-- Stretchable Width for DataGrid -->
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <!-- Main content area -->
+                <RowDefinition Height="Auto" />
+                <!-- Bottom row for buttons -->
+            </Grid.RowDefinitions>
+
+            <!-- Fixed Width ListBox in First Column -->
+            <ListBox x:Name="songsListBox" Grid.Column="0" Grid.Row="0" Margin="10,0,10,10" 
+                     ItemsSource="{Binding Playlists}" SelectionChanged="songsListBox_SelectionChanged">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Vertical">
@@ -35,9 +46,11 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <DataGrid x:Name="dataGrid" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True" 
-                      SelectionMode="Single" HorizontalAlignment="Right" Width="751" Margin="0,31,0,80"
-                      MouseMove="SongsDataGrid_PreviewMouseMove" >
+
+            <!-- DataGrid in Second Column that Adjusts Horizontally -->
+            <DataGrid x:Name="dataGrid" Grid.Column="1" Grid.Row="0" Margin="10" AutoGenerateColumns="False"
+                      CanUserAddRows="False" IsReadOnly="True" SelectionMode="Single" 
+                      MouseMove="SongsDataGrid_PreviewMouseMove">
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding id}" Visibility="Hidden"/>
                     <DataGridTextColumn Binding="{Binding title}" Header="Title" Width="240"/>
@@ -51,14 +64,15 @@
                         <MenuItem Header="Stop" Click="StopMenuItem_Click"/>
                         <MenuItem Header="Remove from All Music" Click="RemoveFromAllMusic_Click"/>
                         <MenuItem Header="Remove from Playlist" Click="RemoveFromPlaylist_Click"/>
-
                     </ContextMenu>
                 </DataGrid.ContextMenu>
             </DataGrid>
-            <StackPanel Margin="214,408,0,0" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="342">
-                <Button x:Name="playButton" Content="Play" Margin="5" Width="75"/>
-                <Button x:Name="stopButton" Content="Stop" Margin="5" Width="75"/>
-                
+
+            <!-- Button StackPanel in Bottom Row, Fixed Position on the Left -->
+            <StackPanel Grid.Row="1" Orientation="Horizontal" 
+                        HorizontalAlignment="Left" Margin="10,5,0,15" Grid.Column="1">
+                <Button x:Name="playButton" Content="Play" Margin="5" Width="75" />
+                <Button x:Name="stopButton" Content="Stop" Margin="5" Width="75" />
             </StackPanel>
         </Grid>
     </DockPanel>
